# signal-snitch

./: .gitignore  LICENSE  docker-compose.yml
agent/: go.mod  main.go  main_test.go
agent/parsers/: amqp.go  event.go  flow_cache.go  kafka.go  parser.go
services/: .gitignore  pyproject.toml  requirements.txt
services/aggregator/: __init__.py  __main__.py  app.py  main.py  telemetry_contract.md
services/amqp_producer/: __init__.py  __main__.py  runner.py
services/producer/: __init__.py  __main__.py  runner.py
services/tests/: test_aggregator_app.py
ui/: Dockerfile  package-lock.json  package.json
ui/app/: globals.css  layout.js  page.jsx
ui/components/: InspectorSidebar.jsx  MetricHeader.jsx  TopologyMap.jsx
