[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-snitch-services"
version = "0.1.0"
description = "Signal Snitch Python services (Kafka producer, telemetry API)"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3.0,<3",
    "fastapi>=0.115.0,<1",
    "uvicorn[standard]>=0.30.0,<1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
